primo commit