@@ -40,7 +40,7 @@ public abstract class LibroDaoFile extends AbstractFileDao implements LibroDao {
     public List<Libro> cercaPerTitolo(String titolo)  {
         return libri.stream()
                 .filter(l -> l.getTitolo().equalsIgnoreCase(titolo))
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
@@ -48,7 +48,7 @@ public abstract class LibroDaoFile extends AbstractFileDao implements LibroDao {
     public List<Libro> cercaPerAutore(String autore)  {
         return libri.stream()
                 .filter(l -> l.getAutore().equalsIgnoreCase(autore))
-                .collect(Collectors.toList());
+                .toList();
 
 
     }
@@ -58,7 +58,7 @@ public abstract class LibroDaoFile extends AbstractFileDao implements LibroDao {
     public List<Libro> cercaPerGenere(String genere)  {
         return libri.stream()
                 .filter(l -> l.getGenere().equalsIgnoreCase(genere))
-                .collect(Collectors.toList());
+                .toList();
 
 
     }
@@ -67,7 +67,7 @@ public abstract class LibroDaoFile extends AbstractFileDao implements LibroDao {
 public List<Libro> cercaPerProprietario(String username)  {
     return libri.stream()
             .filter(l -> l.getUsernameProprietario().equalsIgnoreCase(username))
-            .collect(Collectors.toList());
+            .toList();
 
 
 }
